# JobHunter

./: .env.example  .gitignore  Agent.md  Design.md  README.md  docker-compose.yml  job_hunter_app.jsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  main.py
backend/app/ai/: __init__.py  claude.py  fit.py  knockouts.py  prompt_loader.py  truthfulness_check.py  types.py
backend/app/api/: __init__.py  admin.py  contacts.py  extension.py  health.py  outreach.py  profile.py  search.py  tailoring.py  watchlist.py
backend/app/discovery/: __init__.py  ats.py  ats_providers.py  dedupe.py  orchestrator.py  selectors.yaml  types.py
backend/app/enrichment/: __init__.py  linkedin_url.py  signal.py
backend/app/indexing/: __init__.py  embedder.py  service.py
backend/app/models/: __init__.py  ai_call.py  contact.py  fit.py  job.py  outreach.py  profile.py  resume.py  tailoring.py  trust.py  watchlist.py
backend/app/services/: __init__.py  cover_letter.py  custom_questions.py  diff.py  handles.py  outreach.py  resume_parser.py  resume_render.py  tailoring.py
backend/app/trust/: __init__.py  ai_check.py  longitudinal.py  rules.py  rules.yaml  service.py  verdict.py
backend/app/workers/: __init__.py  background_tailor.py  nightly.py  runner.py  scheduler.py
backend/migrations/: env.py
backend/migrations/versions/: 0c53d61809c6_tailoring_brief_kind_artifact_brief_id_.py  2f5dcc837dcb_watchlist_ats_provider_slug.py  33ddd360c069_contact.py  422d3c31fba4_job_embedding_vector.py  (+9 more)
backend/tests/: conftest.py  test_health.py
docs/: DEPLOYMENT.md  (+5 more)
(+103 files in other folders)
