[project]
name = "jobhunt-backend"
version = "0.1.0"
description = "JobHunt — single-user, self-hosted, AI-augmented job hunt (backend)."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Shawn Alfonso" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
    "jsonschema>=4.23.0",
    "anthropic>=0.39.0",
    "pypdf>=5.1.0",
    "docx2txt>=0.8",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "A", "C4", "T20"]
ignore = [
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
